@@ -1,0 +1,8 @@
+*.coff
+*.exe
+*.d
+*.a
+*.o
+*.sym
+*.map
+*.tmp
